# ml_coarsening

./: .gitignore  LICENCE  README.md  main.py  pyproject.toml
config/: train.yaml
config/model/: ml_coarsening.yaml
config/paths/: defaul.yaml
configs/: export_model.yaml  feature_selection.yaml  inference.yaml  train.yaml
configs/callbacks/: bce_callbacks.yaml  default.yaml  early_stopping.yaml
configs/data/: 2_graphs_test.yaml  binary.yaml  graph_datamodule.yaml  mss_1_20.yaml  multi_class.yaml  multi_k.yaml  multi_k_pred.yaml  pred_default.yaml  synthetic.yaml  train_default.yaml
configs/debug/: default.yaml  overfit.yaml  profiler.yaml
configs/experiment/: bin_classification.yaml  mss_1_20.yaml  multi_classification.yaml  multik_regression.yaml  regression_bce.yaml
configs/hydra/: default.yaml
configs/logger/: mlflow.yaml
configs/model/: binary_class.yaml  ml_coarsening.yaml  ml_coarsening_bce.yaml  multi_class.yaml
configs/paths/: defaul.yaml  default.yaml
configs/trainer/: default.yaml
scripts/: sync_and_run.sh
scripts/exec_scripts/: feature_analysis.sh  ft_selec.sh  inference.sh  run_exp.sh  run_exp_wpred.sh  run_experiments.sh  run_partition_exp.sh  run_partition_exp_no_compile.sh  train.sh
src/: export_model.py  feature_selection.py  inference.py  train.py
src/data/: binary_classification_datamodule.py  graph_datamodule.py  graph_prediction_datamodule.py  multi_classification_datamodule.py  multi_k_prediction_datamodule.py  multi_k_regression_datamodule.py  synthetic_datamodule.py
tests/: datamodule_test.py
(+66 files in other folders)
