[project]
name = "ml-coarsening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "lightning>=2.5.1.post0",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "shap>=0.48.0",
    "torch>=2.7.0",
]
