[project]
name = "ml-coarsening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "imblearn>=0.0",
    "kornia>=0.8.1",
    "lightning>=2.5.1.post0",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "pytest>=8.4.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "torch>=2.7.0",
]
